Initial TUI commit

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ Cargo.lock.report
 # --- TDM Strategy ---
 # We keep TASKS/ in git, but you might want to ignore temp logs if you create them
 # TASKS/*.log
+
+# --- Reports & Corrections ---
+aistar-v0.1.0-fully-corrected.md
