--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1", features = ["full"] }
-tokio-util = { version = "0.7", features = ["full"] }
+tokio-util = "0.7"
 unicode-width = "0.2"
 
 [dev-dependencies]
