--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -233,7 +233,20 @@ jobs:
             echo "::warning::No changes detected"
           fi
 
+      - name: Detect whether PR changes exist
+        id: detect_changes
+        run: |
+          set -euo pipefail
+          if git diff --cached --quiet; then
+            echo "has_changes=false" >> "$GITHUB_OUTPUT"
+            echo "No staged changes; skipping PR creation."
+          else
+            echo "has_changes=true" >> "$GITHUB_OUTPUT"
+            echo "Staged changes detected; PR will be created."
+          fi
+
       - name: Create PR
+        if: steps.detect_changes.outputs.has_changes == 'true'
         uses: peter-evans/create-pull-request@v6
         with:
           commit-message: "chore: fix line endings + formatting"
@@ -245,3 +258,7 @@ jobs:
             - cargo fmt + taplo fmt
           branch: autofix/formatting
           delete-branch: true
+
+      - name: No-op summary
+        if: steps.detect_changes.outputs.has_changes != 'true'
+        run: echo "No formatting/line-ending delta found relative to main; PR not created."
