chore: rename app to vexcoder and CLI to vex

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ Cargo.lock.report
 # TASKS/*.log
 
 # --- Reports & Corrections ---
-aistralis-v0.1.0-fully-corrected.md
+vexcoder-v0.1.0-fully-corrected.md
 
 # --- Local scratch files ---
 scratch-*
