--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,72 +1,31 @@
-name: ci
+name: CI
 
 on:
-  workflow_dispatch:
   push:
-    branches: [main]
+    branches: [ main ]
   pull_request:
+    branches: [ main ]
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Install stable Rust (with rustfmt + clippy)
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          components: rustfmt, clippy
-
-      - name: Cache cargo registry
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Format (rustfmt)
-        run: cargo fmt --check
-
-      - name: Clippy (deny warnings)
-        run: cargo clippy --all-targets -- -D warnings
-
-      - name: Install Taplo (TOML formatter/linter)
-        uses: uncenter/setup-taplo@v1
-        with:
-          version: "0.8.1"
-
-      - name: TOML format (taplo)
-        run: taplo fmt --check --diff
-
-      - name: TOML lint (taplo)
-        run: taplo lint
-
-      - name: Check (all targets)
-        run: cargo check --all-targets
-
-      - name: Test (all)
-        run: cargo test --all
-        env:
-          ANTHROPIC_API_KEY: ""   # prevent accidental real requests in tests
-
-      - name: No UI crates in src/runtime
-        run: |
-          if grep -r "ratatui\|crossterm" src/runtime/; then
-            echo "FAIL: terminal crates leaked into src/runtime/"
-            exit 1
-          fi
-          echo "clean"
-
-      - name: Enforce Rust 2018 module entry naming
-        run: |
-          if find src -mindepth 2 -maxdepth 2 -type f -name 'mod.rs' | grep -q .; then
-            echo "FAIL: Rust 2018 path-based module convention violated."
-            find src -mindepth 2 -maxdepth 2 -type f -name 'mod.rs' | sort
-            exit 1
-          fi
-          echo "clean"
+    - uses: actions/checkout@v4
+    - name: Install Rust toolchain
+      uses: dtolnay/rust-toolchain@stable
+    - name: Install Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.x'
+    - name: Install Python dependencies for httpx[http2]
+      run: |
+        python -m pip install --upgrade pip
+        pip install httpx[http2]
+    - name: Build
+      run: cargo build --verbose
+    - name: Run tests
+      run: cargo test --verbose
